| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135553 | emb-9 | Michael Berg | P3 | Resolved | Fixed | team |
This change enables more applications on EVEX enabled targets by completing more support. The subgroup of microarchitectures enabled which support EVEX encoding via CPUID control is extended to manage more code generation patterns. Improvements were made to vector replication patterns on current architectures and mapped to more efficient forms on EVEX enabled targets. Call save areas were extended and BMI support for existing code generation was augmented to support EVEX enabled microarchitectures. Vector patterns were extended on x86 architectures for completeness including EVEX enabled microarchitectures.
- backported by
-
JDK-8135553 AVX 512 extended support
-
- Resolved
-
- relates to
-
JDK-8132160 support for AVX 512 call frames and stack management
-
- Resolved
-
-
JDK-8224558 Fix replicateB encoding
-
- Closed
-
-
JDK-8076276 Add support for AVX512
-
- Resolved
-