8081247: AVX 512 extended support

Add more support for EVEX encoding

Reviewed-by: kvn, neliasso